tests/snapshots/integration__integration_tests__spacing_edge_cases__long_branch_names.snap
---
source: tests/integration_tests/spacing_edge_cases.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: [TEST_CONFIG]
---
success: true
exit_code: 0
----- stdout -----
[2mBranch                          [0m  [2mCommit  [0m  [2mPath[0m
[1m[35mmain                            [0m  [1m[35mb834638e[0m  [1m[35m./test-repo[0m
another-extremely-long-name-here  [2mb834638e[0m  ./another-extremely-long-name-here
short                             [2mb834638e[0m  ./short
very-long-feature-branch-name     [2mb834638e[0m  ./very-long-feature-branch-name

[2mShowing 4 worktrees[0m

----- stderr -----
